# pr-sideber

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  biome.json  eslint.config.js  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  code-reviewer.md  implementer.md  performance-reviewer.md  planner.md  quality-reviewer.md  refactor-cleaner.md  security-reviewer.md
.claude/hooks/: post-edit-rust.sh  post-edit-ts.sh  pre-command-secret-check.sh  session-start.sh
.claude/rules/: agent-output-quality.md  coding-standards.md  communication.md  git-workflow.md  github-templates.md  rust.md  security.md  testing.md  typescript.md  workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml
public/: placeholder.html  placeholder.js
rust-core/: Cargo.toml
rust-core/crates/adapter-wasm/src/: dto.rs  error.rs  lib.rs  parser.rs
rust-core/crates/adapter-wasm/tests/: integration.rs
rust-core/crates/adapter-wasm/tests/fixtures/: empty_response.json  valid_response.json
rust-core/crates/domain/: Cargo.toml
rust-core/crates/domain/src/: dto.rs  entity.rs  error.rs  lib.rs  status.rs
rust-core/crates/usecase/src/: classify.rs  determine.rs  lib.rs  process.rs  sort.rs  url.rs
src/: manifest.json  vite-env.d.ts
src/background/: bootstrap.ts  claude-session-watcher.ts  external-message-handler.ts  index.ts  message-handler.ts  types.ts  (+3 more)
(+109 files in other folders)
