[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/usecase",
    "crates/adapter-wasm",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
tsify-next = { version = "0.5", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
